# flask_atlassian_connect

./: .buildinfo  .deepsource.toml  .gitignore  .travis.yml  Jenkinsfile  MANIFEST.in  README.md  changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py  tasks.py  test_addon.py
.doctrees/: changelog.doctree  environment.pickle  index.doctree
.github/workflows/: codeql-analysis.yml
_sources/: changelog.rst.txt
_static/: documentation_options.js  flasky.css
ac_flask/: __init__.py  default_settings.py
ac_flask/tests/: test_addon.py
docs/: changelog.rst  code.rst  conf.py  index.rst
flask_atlassian_connect/: __init__.py  base.py  client.py  default_client.py
flask_atlassian_connect/tests/: test_addon.py
requirements/: dev.txt  docs.txt  runtime.txt
tests/: test_addon.py
